[package]
name = "http-push-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["full"] }
rusqlite = "0.30.0"
warp = "0.3"
rusqlite_migration = "1.0.0"
anyhow = "1.0.64"
actix-web = "4"
serde = "1.0"
serde_derive = "1.0"
futures = "0.3"